编辑器可以改写时间戳和歌词行

--- a/src/components/Editor/index.scss
+++ b/src/components/Editor/index.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  background-color: #533D5B;
+  background-color: #A5DEE4;
   border-radius: 10px;
 }
 .text-lines-area{
